@@ -1,8 +1,10 @@
 debathena-libathdir (10.0.1-0debathena1) unstable; urgency=low
 
   * Update our autogoo for the 21st century.
+  * Generate aclocal.m4 ourselves instead of copying in the standard
+    Athena aclocal.m4. (Trac: #334)
 
- -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 13:31:36 -0400
+ -- Evan Broder <broder@mit.edu>  Wed, 28 Apr 2010 13:57:08 -0400
 
 debathena-libathdir (10.0.0-0debathena2) unstable; urgency=low
 
